@@ -1,5 +1,12 @@
 2007-10-25  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet-dbus-settings.c
+		- (applet_dbus_connection_settings_get_secrets): fix logic of adding
+			secrets to hash table to pass back to NM.  Add _each_ secret
+			found to the hash table and pass the whole hash back to NM.
+
+2007-10-25  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-dialog.c
 		- (get_default_type_for_security): avoid dereferencing auth_alg when
 			it's NULL
